@@ -1,3 +1,13 @@
+Mon Jul  1 00:59:23 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (nlz16): New function.
+	  (nlz32): Ditto.
+	  (nlz64): Ditto.
+	  (nlz128): Ditto.
+	  (nlz): Redefined using an above function.
+	  (bitsize): New macro.
+	  (rb_cstr_to_inum): Use bitsize instead of nlz.
+
 Sun Jun 30 22:40:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>
 
 	* lib/prime.rb: Corrected a few comments. Patch by @Nullset14.
